--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <input type="email" name="email" placeholder="Your Email" required>
                     <textarea name="message" placeholder="Your Message" required></textarea>
                     <input type="hidden" name="_captcha" value="false">  <!-- Disable Captcha -->
-                    <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html"> 
+                    <input type="hidden" name="_next" value="thank-you.html"> 
                     <button type="submit">Send Message</button>
                 </form>
                 <p id="form-status"></p>
